@@ -1,35 +1,39 @@
 {% extends "photologue/root.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "Latest Photo Galleries" %}{% endblock %}
+{% block title %}{% trans "Latest photo galleries" %}{% endblock %}
 
 {% block content %}
 
-	<div class="row page-header col-lg-12">
-        <h1>{% trans "Latest Photo Galleries" %}</h1>
-	</div>
+    <div class="row col-lg-12">
+        <h1 class="page-header">{% trans "Latest photo galleries" %}</h1>
+    </div>
 
-	<div class="col-md-2">
+	<div class="row">
+	
+		<aside class="col-md-2">
 
-		<div>{% trans "Filter by year" %}</div>
-		<ul>
-		{% for date in date_list %}
-			<li><a href="{% url 'photologue:pl-gallery-archive-year' date.year %}">{{ date|date:"Y" }}</a></li>
-		{% endfor %}
-		</ul>
+			<h4>{% trans "Filter by year" %}</h4>
+			<ul>
+			{% for date in date_list %}
+				<li><a href="{% url 'photologue:pl-gallery-archive-year' date.year %}">{{ date|date:"Y" }}</a></li>
+			{% endfor %}
+			</ul>
 
-	</div>
+		</aside>
 
-	<div class="col-md-10">
-		
-		{% if latest %}
-		    {% for gallery in latest %}
-		    	{% include "photologue/includes/gallery_sample.html" %}
-		    {% endfor %}
-		{% else %}
-		    <div class="row">{% trans "No galleries were found" %}.</div>
-		{% endif %}
-		
+		<main class="col-md-10">
+			
+			{% if latest %}
+			    {% for gallery in latest %}
+			    	{% include "photologue/includes/gallery_sample.html" %}
+			    {% endfor %}
+			{% else %}
+			    <p>{% trans "No galleries were found" %}.</p>
+			{% endif %}
+			
+		</main>
+
 	</div>
 	
 {% endblock %}
