@@ -5,34 +5,36 @@
 
 {% block content %}
 
-	<div class="row page-header col-lg-12">
-        <h1>{% blocktrans with show_year=year|date:"Y" %}Galleries for {{ show_year }}{% endblocktrans %}</h1>
-	</div>
+    <div class="row col-lg-12">
+        <h1 class="page-header">{% blocktrans with show_year=year|date:"Y" %}Galleries for {{ show_year }}{% endblocktrans %}</h1>
+    </div>
 
-	<div class="col-md-2">
+	<div class="row">
 
-		<div>{% trans "Filter by month" %}</div>
-		<ul>
-			{% for date in date_list %}
-				<li><a href="{% url 'photologue:gallery-archive-month' date.year date|date:"m"|lower %}">{{ date|date:"F" }}</a></li>
-			{% endfor %}
-		</ul>
+		<aside class="col-md-2">
 
-	</div>
+			<h4>{% trans "Filter by month" %}</h4>
+			<ul>
+				{% for date in date_list %}
+					<li><a href="{% url 'photologue:gallery-archive-month' date.year date|date:"m"|lower %}">{{ date|date:"F" }}</a></li>
+				{% endfor %}
+			</ul>
 
-	<div class="col-md-10">
+		</aside>
 
-		{% if object_list %}
-			{% for gallery in object_list %}
-		        {% include "photologue/includes/gallery_sample.html" %}
-		    {% endfor %}
-		{% else %}
-		    <div class="row">{% trans "No galleries were found." %}</div>
-		{% endif %}
+		<main class="col-md-10">
 
-	    <div class="row col-lg-12">
-            <a href="{% url 'photologue:pl-gallery-archive' %}" class="btn btn-default">{% trans "View all galleries" %}</a>
-	    </div>
+			{% if object_list %}
+				{% for gallery in object_list %}
+			        {% include "photologue/includes/gallery_sample.html" %}
+			    {% endfor %}
+			{% else %}
+			    <p>{% trans "No galleries were found." %}</p>
+			{% endif %}
+
+		    <div><a href="{% url 'photologue:pl-gallery-archive' %}" class="btn btn-default">{% trans "View all galleries" %}</a></div>
+
+		</main>
 
 	</div>
 
