@@ -2,7 +2,7 @@
 
 {# Display a randomnly-selected set of photos from a given gallery #}
 
-<div class="row col-lg-12">
+<div>
     
     <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
     <p class="muted"><small>{% trans "Published" %} {{ gallery.date_added }}</small></p>
