@@ -1,18 +1,16 @@
 {% extends "photologue/root.html" %}
 {% load i18n %}
 
-{% block title %}{% trans "All Photos" %}{% endblock %}
+{% block title %}{% trans "All photos" %}{% endblock %}
 
 {% block content %}
 
-    <div class="row page-header">
-        <div class="col-lg-12">
-            <h1>{% trans "All Photos" %}</h1>
-        </div>
+    <div class="row col-lg-12">
+        <h1 class="page-header">{% trans "All photos" %}</h1>
     </div>
 
 	{% if object_list %}
-		<div class="row">
+		<div class="row col-lg-12">
 		    {% for photo in object_list %}
 		        <a href="{{ photo.get_absolute_url }}">
 		             <img src="{{ photo.get_thumbnail_url }}" class="thumbnail" alt="{{ photo.title }}">
